--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#076b10</color>
+    <color name="colorPrimaryDark">#073d0c</color>
+    <color name="colorAccent">#ceedd0</color>
+    <color name="colorAccentTransparent">#59ceedd0</color>
 </resources>
