Added options menu to actionbar

--- a/app/src/main/res/layout/fragment_lost.xml
+++ b/app/src/main/res/layout/fragment_lost.xml
@@ -3,11 +3,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.FragmentLost">
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Switch" />
-</FrameLayout>
+    tools:context=".ui.main.FragmentLost"/>
