--- a/app/src/main/res/layout/fragment_found.xml
+++ b/app/src/main/res/layout/fragment_found.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.FragmentFound">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
