--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/item1"
         android:title="@string/app_name"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
 </menu>
