Added listview with custom entries for found-fragment

--- a/app/src/main/res/layout/fragment_lost.xml
+++ b/app/src/main/res/layout/fragment_lost.xml
@@ -3,4 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.FragmentLost"/>
+    tools:context=".ui.main.FragmentLost">
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@color/colorPrimary"
+        android:dividerHeight="1dp" />
+
+
+</FrameLayout>
+
+
