--- a/app/src/main/res/layout/activity_found.xml
+++ b/app/src/main/res/layout/activity_found.xml
@@ -13,12 +13,41 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageView3"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="380dp"
-                android:layout_marginTop="10dp"
-                app:srcCompat="@mipmap/ic_launcher_round" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageView_found"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:srcCompat="@mipmap/ic_launcher_round" />
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    android:background="#00000000" />
+
+                <View
+                    android:layout_width="3dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="?android:attr/listDivider" />
+
+                <View
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent"
+                    android:background="#00000000" />
+
+                <com.google.android.gms.maps.MapView
+                    android:id="@+id/mapView_found"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -51,7 +80,7 @@
                     android:text="@string/title_text" />
 
                 <TextView
-                    android:id="@+id/textView_title"
+                    android:id="@+id/textView_title_found"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -87,7 +116,7 @@
                     android:text="@string/date_text" />
 
                 <TextView
-                    android:id="@+id/textView_date"
+                    android:id="@+id/textView_date_found"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -109,16 +138,21 @@
                 android:background="#00000000" />
 
             <TextView
-                android:id="@+id/textView_desc"
+                android:id="@+id/textView_desc_found"
                 android:layout_width="match_parent"
                 android:layout_height="133dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp" />
 
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mapView"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="400dp" />
+                android:layout_height="197dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
+            </ScrollView>
 
         </LinearLayout>
     </ScrollView>
