--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -25,13 +25,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="30dp"
+        android:layout_alignEnd="@+id/myRectangleView"
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="35dp"
-        android:layout_marginEnd="-10dp"
-        android:layout_toStartOf="@+id/imageButton"
+        android:layout_marginEnd="10dp"
         android:layout_toEndOf="@+id/imageView"
         android:ellipsize="marquee"
         android:focusable="true"
@@ -41,18 +41,5 @@
         android:scrollHorizontally="true"
         android:singleLine="true"
         android:textSize="18sp" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="15dp"
-        android:background="#00000000"
-        android:contentDescription="@string/image_content_description"
-        app:srcCompat="@drawable/ic_settings" />
 
 </RelativeLayout>
