--- a/app/src/main/res/layout/activity_found.xml
+++ b/app/src/main/res/layout/activity_found.xml
@@ -144,15 +144,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp" />
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="197dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
-            </ScrollView>
+            <ListView
+                android:id="@+id/possible_matches"
+                android:layout_width="wrap_content"
+                android:layout_height="308dp" />
 
         </LinearLayout>
     </ScrollView>
