--- a/app/src/main/res/menu/menu_lost.xml
+++ b/app/src/main/res/menu/menu_lost.xml
@@ -3,18 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item000"
-        android:title="@string/settings"
+        android:id="@+id/item99"
+        android:title="@string/report"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/item100"
-        android:title="@string/slp"
-        app:showAsAction="never" />
-
-    <item
-        android:id="@+id/item200"
-        android:title="@string/fp"
+        android:id="@+id/item90"
+        android:title="@string/contact_owner"
         app:showAsAction="never" />
 
 </menu>
