--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -21,7 +21,8 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -56,7 +57,8 @@
             android:id="@+id/textView74747"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -91,7 +93,8 @@
             android:id="@+id/textView67377"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -126,7 +129,8 @@
             android:id="@+id/textView147"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -161,7 +165,8 @@
             android:id="@+id/textView867"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -196,7 +201,8 @@
             android:id="@+id/textView2357"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -231,7 +237,8 @@
             android:id="@+id/textView667"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
@@ -266,7 +273,8 @@
             android:id="@+id/textView7213"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
 
     </LinearLayout>
 
