--- a/app/src/main/res/layout/activity_create_found.xml
+++ b/app/src/main/res/layout/activity_create_found.xml
@@ -22,7 +22,7 @@
                 android:text="@string/create_title" />
 
             <EditText
-                android:id="@+id/textView3"
+                android:id="@+id/textView__title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,7 +55,7 @@
                 android:text="@string/create_desc" />
 
             <EditText
-                android:id="@+id/textView32"
+                android:id="@+id/textView__desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -88,7 +88,7 @@
                 android:text="@string/create_lat" />
 
             <EditText
-                android:id="@+id/textView1"
+                android:id="@+id/textView__lat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -122,7 +122,7 @@
                 android:text="@string/create_lon" />
 
             <EditText
-                android:id="@+id/textView31"
+                android:id="@+id/textView__lon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
